Se agregó un espacio para BARS, se empezo a unir algunos links, y se agregó el lobby de hardware, además de sus respectivos estilos y modificación de algunos anteriores

--- a/Code/index.html
+++ b/Code/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="../Imgs/media/logoN.svg" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700&display=swap" rel="stylesheet">
     <title>Teshare</title>
 </head>
 <body>
 
-    <header>
+    <header class="header-main">
 
         <div class="header-top">
 
@@ -22,11 +23,12 @@
             </div>
 
             <div class="Logo">
-                <h3>Te</h3><img src="../imgs/media/Logo.svg" alt="img/svg" id="logo-icon-yellowS"><h3>Share</h3>
+                <a href="#">
+                <h3>Te</h3><img src="../imgs/media/Logo.svg" alt="img/svg" id="logo-icon-yellowS"><h3>Share</h3></a>
             </div>
 
             <div class="bars">
-                <img src="../Imgs/Icons/Bars.svg" alt="img/svg" id="menu-icon">
+                <a href="./bars.html"><img src="../Imgs/Icons/Bars.svg" alt="img/svg" id="menu-icon"></a>
             </div>
             
         </div>
@@ -49,7 +51,7 @@
             <nav class="nav-categories">
 
                 <button class="hardware">
-                    <a href="#">
+                    <a href="./lobby-hardware.html">
                         <img src="../Imgs/Icons/desktop_windows.svg" alt="img/svg">
                         <h5>Hardware</h5>
                     </a>
@@ -239,7 +241,7 @@
 
     </section>
 
-    <div class="footer-box">  
+    <div class="footer-box main-footer">  
 
         <footer class="footer">
 
