Se termino con la base de todos los lobbys según cada categoría, además de la actualización de algunos detalles en el menú principal e inicio de la pestaña de bars

--- a/Code/index.html
+++ b/Code/index.html
@@ -58,21 +58,21 @@
                 </button>
 
                 <button class="software">
-                    <a href="#">
+                    <a href="./lobby-software.html">
                         <img src="../Imgs/Icons/brush.svg" alt="svg">
                         <h5>Software</h5>
                     </a>                    
                 </button>
 
                 <button class="conceptos">
-                    <a href="#">
+                    <a href="./lobby-conceptos.html">
                         <img src="../Imgs/Icons/book-svgrepo-com (1) 1.svg" alt="img/svg">
                         <h5>Conceptos</h5>
                     </a>                    
                 </button>
 
                 <button class="articulos">
-                    <a href="#">
+                    <a href="./lobby-articulos.html">
                         <img src="../Imgs/Icons/bookmark_border.svg" alt="img/svg">
                         <h5>Artículos</h5>
                     </a>                    
