Solución de problemas con direcciones url y finalización de BARS

--- a/Code/bars.html
+++ b/Code/bars.html
@@ -11,5 +11,24 @@
 </head>
     <body>
         
+        <div class="bar-close">
+            <a href="javascript: history.go(-1)">
+                <img src="../Imgs/media/iconmonstr-x-mark-5.svg">
+            </a>
+        </div>
+
+        <div class="bar-box">
+
+            <a href="index.html"><h2>Inicio</h2></a>
+            <div class="line"></div><br><br><br>
+            <a href="lobby-conceptos.html"><h2>Categorías</h2></a>
+            <div class="line"></div><br><br><br>
+            <a href="#"><h2>¿Quienes Somos?</h2></a>
+            <div class="line"></div><br><br><br>
+            <a href="#"><h2>Contacto</h2></a>
+            <div class="line"></div><br><br><br>
+
+        </div>
+        
     </body>
 </html>
