Se adelantó gran parte de la creación de blogs, falta terminar el blog, ajustar los estilos y hacer que el index tenga la propiedad sticky

--- a/Code/lobby-software.html
+++ b/Code/lobby-software.html
@@ -16,7 +16,7 @@
         <div class="header-top">
 
             <div class="icons">
-                <a href="#"><img src="../imgs/media/google-gmail-svgrepo-com.svg" alt="img/svg" id="gmail-icon"></a>
+                <a href="#"><img src="../Imgs/media/google-gmail-svgrepo-com.svg" alt="img/svg" id="gmail-icon"></a>
                 <a href="#"><img src="../imgs/media/instagram-2-1-logo-svgrepo-com.svg" alt="img/svg" id="insta-icon"></a>
                 <a href="#"><img src="../imgs/media/githubWHITE-svgrepo-com.svg" alt="img/svg" id="github-icon"></a>
                 <a href="#"><img src="../imgs/media/twitter-svgrepo-com.svg" alt="img/svg" id="twitter-icon"></a>
@@ -100,7 +100,7 @@
         <nav class="lobby-grid ">
 
             <div class="grid-card">
-                <a href="#">
+                <a href="../blogs/Software-páginas_web.html">
                     <div class="Hrd-bg-card Hrd-card-01">
                     </div>
 
