Se termino la primera página blog, además de agregar la seccion de contacto apenas iniciada

--- a/Code/bars.html
+++ b/Code/bars.html
@@ -25,7 +25,7 @@
             <div class="line"></div><br><br><br>
             <a href="#"><h2>¿Quienes Somos?</h2></a>
             <div class="line"></div><br><br><br>
-            <a href="#"><h2>Contacto</h2></a>
+            <a href="/Code/Contact.html"><h2>Contacto</h2></a>
             <div class="line"></div><br><br><br>
 
         </div>
