Se actualizaron las opciones de los lobbys, además de terminar el Lobby de Conceptos

--- a/Code/lobby-articulos.html
+++ b/Code/lobby-articulos.html
@@ -80,10 +80,10 @@
         
         <div class="phrase">
             <p class="text">
-                “Creer que sabes es una enfermedad. <br> Saber que está es la enfermedad es el primer paso para la salud.”
+                “Tan sólo por la educación puede el hombre llegar a ser hombre. <br> El hombre no es más que lo que la educación hace de él.”
             </p>
             <h4 class="harder">
-                - Socrates
+                - Kant
             </h4>
             
         </div>
