--- a/blogs/Software-páginas_web.html
+++ b/blogs/Software-páginas_web.html
@@ -349,20 +349,7 @@
         </footer>
 
     </div>
-    <script>
-        
-        const moon = document.getElementById('moon');
-        const sun = document.getElementById('sun');
-        const article = document.getElementById('article');
-
-        moon.addEventListener('click',function(){
-            article.classList.add('night')
-        });
-
-        sun.addEventListener('click',function(){
-            article.classList.remove('night')
-        });
-
+    <script src="switch-color.js">
     </script>
     </body>
 </html>
