Se linkearon las redes sociales, se agregó una rueda para subir más rapidamente y se terminó el lobby de contacto

--- a/Code/bars.html
+++ b/Code/bars.html
@@ -23,7 +23,7 @@
             <div class="line"></div><br><br><br>
             <a href="lobby-conceptos.html"><h2>Categorías</h2></a>
             <div class="line"></div><br><br><br>
-            <a href="#"><h2>¿Quienes Somos?</h2></a>
+            <a href="index.html#aboutus"><h2>¿Quienes Somos?</h2></a>
             <div class="line"></div><br><br><br>
             <a href="/Code/Contact.html"><h2>Contacto</h2></a>
             <div class="line"></div><br><br><br>
