--- a/Code/lobby-hardware.html
+++ b/Code/lobby-hardware.html
@@ -16,10 +16,10 @@
         <div class="header-top">
 
             <div class="icons">
-                <a href="#"><img src="../imgs/media/google-gmail-svgrepo-com.svg" alt="img/svg" id="gmail-icon"></a>
-                <a href="#"><img src="../imgs/media/instagram-2-1-logo-svgrepo-com.svg" alt="img/svg" id="insta-icon"></a>
-                <a href="#"><img src="../imgs/media/githubWHITE-svgrepo-com.svg" alt="img/svg" id="github-icon"></a>
-                <a href="#"><img src="../imgs/media/twitter-svgrepo-com.svg" alt="img/svg" id="twitter-icon"></a>
+                <a href="https://mail.google.com/mail/u/0/#inbox" target="_blank"><img src="../imgs/media/google-gmail-svgrepo-com.svg" alt="img/svg" id="gmail-icon"></a>
+                <a href="https://www.instagram.com/daanq_27/?hl=es-la" target="_blank"><img src="../imgs/media/instagram-2-1-logo-svgrepo-com.svg" alt="img/svg" id="insta-icon"></a>
+                <a href="https://github.com/KawKuroi/TeShare-Website" target="_blank"><img src="../imgs/media/githubWHITE-svgrepo-com.svg" alt="img/svg" id="github-icon"></a>
+                <a href="https://twitter.com/TechTeshare" target="_blank"><img src="../imgs/media/twitter-svgrepo-com.svg" alt="img/svg" id="twitter-icon"></a>
             </div>
 
             <div class="Logo">
@@ -203,11 +203,10 @@
             </div>
 
             <div class="footer-icons icons">
-                <a href="#"><img src="../imgs/media/google-gmail-svgrepo-com.svg" alt="img/svg" id="gmail-icon"></a>
-                <a href="#"><img src="../imgs/media/instagram-2-1-logo-svgrepo-com.svg" alt="img/svg" id="insta-icon"></a>
-                <a href="#"><img src="../imgs/media/githubWHITE-svgrepo-com.svg" alt="img/svg" id="github-icon"></a>
-                <a href="#"><img src="../imgs/media/twitter-svgrepo-com.svg" alt="img/svg" id="twitter-icon"></a>
-            </div>
+                <a href="https://mail.google.com/mail/u/0/#inbox" target="_blank"><img src="../imgs/media/google-gmail-svgrepo-com.svg" alt="img/svg" id="gmail-icon"></a>
+                <a href="https://www.instagram.com/daanq_27/?hl=es-la" target="_blank"><img src="../imgs/media/instagram-2-1-logo-svgrepo-com.svg" alt="img/svg" id="insta-icon"></a>
+                <a href="https://github.com/KawKuroi/TeShare-Website" target="_blank"><img src="../imgs/media/githubWHITE-svgrepo-com.svg" alt="img/svg" id="github-icon"></a>
+                <a href="https://twitter.com/TechTeshare" target="_blank"><img src="../imgs/media/twitter-svgrepo-com.svg" alt="img/svg" id="twitter-icon"></a></div>
 
         </footer>
 
