Actualización de los fondos en cada blog y configuración general del mismo

--- a/Code/lobby-hardware.html
+++ b/Code/lobby-hardware.html
@@ -99,7 +99,7 @@
         <nav class="lobby-grid HLobby">
 
             <div class="grid-card">
-                <a href="#">
+                <a href="/blogs/Hardware-procesador.html">
                     <div class="Hrd-bg-card" id="Hrd-card-01">
                     </div>
 
@@ -113,7 +113,7 @@
                 </a>
             </div>
             <div class="grid-card">
-                <a href="#">
+                <a href="/blogs/Hardware-ram.html">
                     <div class="Hrd-bg-card" id="Hrd-card-02">
                     </div>
 
@@ -127,7 +127,7 @@
                 </a>
             </div>
             <div class="grid-card">
-                <a href="#">
+                <a href="/blogs/Hardware-almacenamiento.html">
                     <div class="Hrd-bg-card" id="Hrd-card-03">
                     </div>
 
@@ -141,7 +141,7 @@
                 </a>
             </div>
             <div class="grid-card">
-                <a href="#">
+                <a href="/blogs/Hardware-grafica.html">
                     <div class="Hrd-bg-card" id="Hrd-card-04">
                     </div>
 
@@ -155,7 +155,7 @@
                 </a>
             </div>
             <div class="grid-card">
-                <a href="#">
+                <a href="/blogs/Hardware-motherboard.html">
                     <div class="Hrd-bg-card" id="Hrd-card-05">
                     </div>
 
@@ -169,7 +169,7 @@
                 </a>
             </div>
             <div class="grid-card">
-                <a href="#">
+                <a href="/blogs/Hardware-fuenteDePoder.html">
                     <div class="Hrd-bg-card" id="Hrd-card-06">
                     </div>
 
