--- a/Code/lobby-software.html
+++ b/Code/lobby-software.html
@@ -114,7 +114,7 @@
                 </a>
             </div>
             <div class="grid-card">
-                <a href="#">
+                <a href="/blogs/Software-FLStudio.html">
                     <div class="Hrd-bg-card" id="Srd-card-02">
                     </div>
 
@@ -129,7 +129,7 @@
                 </a>
             </div>
             <div class="grid-card">
-                <a href="#">
+                <a href="/blogs/Software-Filmora.html">
                     <div class="Hrd-bg-card" id="Srd-card-03">
                     </div>
 
