--- a/Code/index.html
+++ b/Code/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../Imgs/media/logoN.svg" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
+    <meta name="Palabras clave" content="tecnología,paginaweb,aprendizaje,cursos,informacion,glosario,aprender,filosofia,frases,microempresa,teshare,hardware,software,conceptos,articulos,contacto,github,twitter">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700&display=swap" rel="stylesheet">
     <title>Teshare</title>
 </head>
