--- a/blogs/Hardware-fuenteDePoder.html
+++ b/blogs/Hardware-fuenteDePoder.html
@@ -95,8 +95,8 @@
                            
                 <div>
                     <ul>
-                        <li><a href="#Conceptos-importantes-Filmora"><h5>¿Que es fuente de poder?</h5></a></li><br>
-                        <li><a href="#MASINFO-SOFTWARE-PÁGINAS_WEB"><h5>Referencias</h5></a></li>
+                        <li><a href="#QueEsFuente"><h5>¿Que es fuente de poder?</h5></a></li><br>
+                        <li><a href="#referencias"><h5>Referencias</h5></a></li>
                     </ul>
                     <br>
                 </div>
@@ -135,7 +135,7 @@
             <div class="masInfo-space">
 
                
-                <p><h4 class="masInfo" id="MASINFO-SOFTWARE-PÁGINAS_WEB">Para más información:</h4>
+                <p><h4 class="masInfo" id="referencias">Para más información:</h4>
                 </p><br>
 
                 <p><i>
