Se modificó parte de index, se termino el proyecto en pantalla para pc, además de linkear la mayoría de enlaces en la página web

--- a/Code/bars.html
+++ b/Code/bars.html
@@ -21,7 +21,7 @@
 
             <a href="index.html"><h2>Inicio</h2></a>
             <div class="line"></div><br><br><br>
-            <a href="lobby-conceptos.html"><h2>Categorías</h2></a>
+            <a href="lobby-hardware.html"><h2>Categorías</h2></a>
             <div class="line"></div><br><br><br>
             <a href="index.html#aboutus"><h2>¿Quienes Somos?</h2></a>
             <div class="line"></div><br><br><br>
