--- a/Code/lobby-hardware.html
+++ b/Code/lobby-hardware.html
@@ -99,7 +99,7 @@
         <nav class="lobby-grid HLobby">
 
             <div class="grid-card">
-                <a href="/blogs/Hardware-procesador.html">
+                <a href="../blogs/Hardware-procesador.html">
                     <div class="Hrd-bg-card" id="Hrd-card-01">
                     </div>
 
@@ -108,12 +108,12 @@
                         <p>El procesador <br><i>¿Dejas que ese pequeño artefacto te diga qué hacer?</i></p>                        
                     </div>
                     <div class="content-space HSpace">
-                        <p>el procesador es el cerebro de nuestro computador, ya que por aquí pasa toda la información que necesitamos para poder hacer cualquier tipo de proceso en nuestra computadora, este esta compuesto por unos varios millones de microtransitores los cuales están diseñados...</p>
+                        <p>el procesador es el cerebro de nuestro computador, ya que por aquí pasa toda la información que necesitamos para poder hacer cualquier tipo de proceso en nuestra computadora, este esta compuesto por unos varios millones...</p>
                     </div>
                 </a>
             </div>
             <div class="grid-card">
-                <a href="/blogs/Hardware-ram.html">
+                <a href="../blogs/Hardware-ram.html">
                     <div class="Hrd-bg-card" id="Hrd-card-02">
                     </div>
 
@@ -127,7 +127,7 @@
                 </a>
             </div>
             <div class="grid-card">
-                <a href="/blogs/Hardware-almacenamiento.html">
+                <a href="../blogs/Hardware-almacenamiento.html">
                     <div class="Hrd-bg-card" id="Hrd-card-03">
                     </div>
 
@@ -141,7 +141,7 @@
                 </a>
             </div>
             <div class="grid-card">
-                <a href="/blogs/Hardware-grafica.html">
+                <a href="../blogs/Hardware-grafica.html">
                     <div class="Hrd-bg-card" id="Hrd-card-04">
                     </div>
 
@@ -150,12 +150,12 @@
                         <p>Tarjetas gráficas<br><i>Sin esta pieza, no podríamos ver lo hermoso que es word</i></p>                        
                     </div>
                     <div class="content-space HSpace">
-                        <p>una tarjeta gráfica es un dispositivo que se encarga de convertir la información que le llega desde el procesador y emitirla en el monitor o pantalla que se esté usando, esta es conocida como una GPU o graphics processing unit, es muy importante en el mundo de los videojuegos y de la edición de video profesional...</p>
+                        <p>una tarjeta gráfica es un dispositivo que se encarga de convertir la información que le llega desde el procesador y emitirla en el monitor o pantalla que se esté usando, esta es conocida como una GPU o graphics processing unit...</p>
                     </div>
                 </a>
             </div>
             <div class="grid-card">
-                <a href="/blogs/Hardware-motherboard.html">
+                <a href="../blogs/Hardware-motherboard.html">
                     <div class="Hrd-bg-card" id="Hrd-card-05">
                     </div>
 
@@ -169,7 +169,7 @@
                 </a>
             </div>
             <div class="grid-card">
-                <a href="/blogs/Hardware-fuenteDePoder.html">
+                <a href="../blogs/Hardware-fuenteDePoder.html">
                     <div class="Hrd-bg-card" id="Hrd-card-06">
                     </div>
 
@@ -193,8 +193,8 @@
 
             <div class="footer-logo">
             
-                <img src="../Imgs/media/logoB.svg" alt="img/svg">
-                <p>TeShare</p>
+                <a href="/Code/"><img src="../Imgs/media/logoB.svg" alt="img/svg">
+                <p>TeShare</p></a>
             
             </div>
 
