--- a/blogs/Hardware-procesador.html
+++ b/blogs/Hardware-procesador.html
@@ -180,8 +180,8 @@
 
             <div class="footer-logo">
             
-                <img src="../Imgs/media/logoB.svg" alt="img/svg">
-                <p>TeShare</p>
+                <a href="../Code/index.html"><img src="../Imgs/media/logoB.svg" alt="img/svg">
+                <p>TeShare</p></a>
             
             </div>
 
