--- a/Code/lobby-software.html
+++ b/Code/lobby-software.html
@@ -153,8 +153,8 @@
 
             <div class="footer-logo">
             
-                <img src="../Imgs/media/logoB.svg" alt="img/svg">
-                <p>TeShare</p>
+                <a href="/Code/index.html"><img src="../Imgs/media/logoB.svg" alt="img/svg">
+                <p>TeShare</p></a>
             
             </div>
 
