--- a/blogs/Software-páginas_web.html
+++ b/blogs/Software-páginas_web.html
@@ -335,8 +335,8 @@
 
             <div class="footer-logo">
             
-                <img src="../Imgs/media/logoB.svg" alt="img/svg">
-                <p>TeShare</p>
+                <a href="../Code/index.html"><img src="../Imgs/media/logoB.svg" alt="img/svg">
+                <p>TeShare</p></a>
             
             </div>
 
