Se convirtió el proyecto para ser reproducido con Responsive Design, solo en el index, temporalmente

--- a/Code/index.html
+++ b/Code/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 
-    <header class="header-main">
+    <header class="header-main" id="HDM">
 
         <div class="header-top">
 
@@ -23,6 +23,7 @@
                 <a href="https://twitter.com/TechTeshare" target="_blank"><img src="../imgs/media/twitter-svgrepo-com.svg" alt="img/svg" id="twitter-icon"></a>
             </div>
 
+
             <div class="Logo">
                 <a href="#">
                 <h3>Te</h3><img src="../imgs/media/Logo.svg" alt="img/svg" id="logo-icon-yellowS"><h3>Share</h3></a>
@@ -30,6 +31,7 @@
 
             <div class="bars">
                 <a href="./bars.html"><img src="../Imgs/Icons/Bars.svg" alt="img/svg" id="menu-icon"></a>
+                <a href="./bars.html"><img src="../Imgs/Icons/BarsRD.svg" alt="img/svg" id="menu-iconRD"></a>
             </div>
             
         </div>
@@ -40,7 +42,7 @@
             <h2>&nbsp;&nbsp;&nbsp;Share +</h2>
             <h2>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Tech =</h2>
             <h1>TeShare</h1>
-            <h3>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;“You're your limit”</h3>        
+            <h3>“You're your limit”</h3>        
 
         </div>
 
@@ -267,5 +269,6 @@
         </footer>
 
     </div>
+    
 </body>
 </html>
